Atualização Lista Pacientes

--- a/docs/15_HANDOFF_2026-02-14.md
+++ b/docs/15_HANDOFF_2026-02-14.md
@@ -94,3 +94,11 @@
 
 ---
 Gerado para reiniciar chat amanhã com continuidade, mantendo o método: **passo a passo (1 por 1), arquivo completo quando houver alteração**.
+
+
+### D) Firestore `permission-denied` (appointments) no primeiro acesso
+**Sintoma:** agenda do paciente falha com `permission-denied` logo após o pareamento (janela curta).  
+**Causa provável:** rules de `appointments` dependiam de `users/{uid}.phoneCanonical`, mas o doc ainda não estava persistido no primeiro acesso.  
+**Correção (2026-02-14):** rules passaram a aceitar fallback por claim `request.auth.token.phoneCanonical` (emitida no pareamento), permitindo a leitura até o `users/{uid}` ser gravado.  
+**Arquivo:** `/firestore.rules`
+
